Modify the gas of snark verification to follow Ethereum Metropolis