@@ -2,9 +2,12 @@ package org.ethereum.crypto;
 
 import java.io.*;
 import java.math.BigInteger;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Random;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.*;
+
+import static org.ethereum.crypto.HashUtil.sha3;
 
 /**
  * Created by prover on 4/29/17.
@@ -12,7 +15,20 @@ import java.util.Random;
 public class Snarks {
 
 
-    public static int verify (byte[] data){
+    private static int cnt = 0;
+
+    private String path;
+
+    public Snarks(long rnd){
+        cnt++;
+        path = "snark_verify_dir/" + cnt + "-" + rnd;
+    }
+
+    public int verify (byte[] data) throws RuntimeException {
+
+
+        //String path = "snark_verify_dir/" + cnt;
+        new File(path).mkdirs();
 
         final int FALSE = 0xffffffff;
         final int TRUE = 1;
@@ -20,7 +36,7 @@ public class Snarks {
         int verification;
 
         try {
-            parseDataStream(data);
+            parseDataStream(data, path);
         } catch (IOException | RuntimeException e) {
             //If data is not formatted, then verification fails
             e.printStackTrace();
@@ -28,12 +44,11 @@ public class Snarks {
         }
 
         try {
-            verification = run_libsnark_verifier() ?  TRUE : FALSE;
+            verification = run_libsnark_verifier(path) ?  TRUE : FALSE;
         } catch (Exception e) {
             e.printStackTrace();
             return FALSE;
         }
-
         return verification;
     }
 
@@ -46,7 +61,7 @@ public class Snarks {
      * @throws RuntimeException
      * @throws IOException
      */
-    private static void parseDataStream(byte[] data) throws RuntimeException, IOException{
+    private static void parseDataStream(byte[] data, String path) throws RuntimeException, IOException{
 
         BigInteger inputLength = null, vkLength, proofLength;
 
@@ -54,16 +69,16 @@ public class Snarks {
 
         FileOutputStream primary_input, vk , proof;
         try {
-            primary_input = new FileOutputStream("Primary_Input");
-            vk = new FileOutputStream("Verification_Key");
-            proof = new FileOutputStream("Proof");
+            primary_input = new FileOutputStream(path +"/"+ "Primary_Input");
+            vk = new FileOutputStream(path +"/"+ "Verification_Key");
+            proof = new FileOutputStream(path +"/"+ "Proof");
         } catch (FileNotFoundException e) {
             e.printStackTrace();
             throw e;
         }
 
         try {
-            //read public inputs
+            //read public inputs (primary inputs)
             int i;
             for (i = 0 ; i < data.length / 32; i++) {
                 if (i == 0) {
@@ -119,11 +134,16 @@ public class Snarks {
         return res;
     }
 
-    private static boolean run_libsnark_verifier() throws Exception {
+    private static boolean run_libsnark_verifier(String path) throws Exception {
 
         Process p;
-        p = Runtime.getRuntime()
-                .exec(new String[]{"ethereumj-application-demo/res/run_libsnark_verifier"});
+        p = Runtime.getRuntime().exec(
+                        new String[]{
+                                "ethereumj-application-demo/res/run_libsnark_verifier",
+                                path +"/"+ "Verification_Key",
+                                path +"/"+ "Primary_Input",
+                                path +"/"+ "Proof"
+                        });
         p.waitFor();
 
         String line;
@@ -133,12 +153,118 @@ public class Snarks {
             buf.append(line + "\n");
         }
         input.close();
+        p.destroy();
+        File file = new File(path + "/log");
+        FileOutputStream out = new FileOutputStream(file);
+        out.write(buf.toString().getBytes());
+        out.flush();
+        out.close();
         if (buf.toString().contains("* The verification result is: PASS")) {
             return true;
         }
         //System.out.println(buf.toString());
         return false;
     }
+
+
+
+    public static void main(String[] args) throws IOException {
+
+        //String path = "snark_verify_dir/" + 114 + "-" + 4429444200634658255L;
+        String path = "snark_verify_dir/7-players";
+        //67-2815805291983793877
+        File proof = new File(path+"/Proof");
+        File input = new File(path+"/Primary_Input");
+        File vk = new File(path+"/Verification_Key");
+
+        if(!proof.exists()){
+            throw new FileNotFoundException(path+"/Proof");
+        }
+
+        if(!input.exists()){
+            throw new FileNotFoundException(path+"/Primary_Input");
+        }
+
+        if(!vk.exists()){
+            throw new FileNotFoundException(path+"/Verification_Key");
+        }
+
+
+        byte[] buf = concat(concat(getBytesFromFile(proof),getBytesFromFile(input)),getBytesFromFile(vk));
+
+        Long start = System.nanoTime();
+        sha3(buf);
+        Long end = System.nanoTime();
+        System.out.println("SHA3 time: " + (end - start));
+
+        start = System.nanoTime();
+        sha3(buf);
+        end = System.nanoTime();
+        System.out.println("SHA3 time: " + (end - start));
+
+        start = System.nanoTime();
+        sha3(buf);
+        end = System.nanoTime();
+        System.out.println("SHA3 time: " + (end - start));
+
+        start = System.nanoTime();
+        sha3(buf);
+        end = System.nanoTime();
+        System.out.println("SHA3 time: " + (end - start));
+
+        start = System.nanoTime();
+        sha3(buf);
+        end = System.nanoTime();
+        System.out.println("SHA3 time: " + (end - start));
+    }
+
+    static byte[] concat(byte[] A, byte[] B) {
+        byte[] C= new byte[A.length+B.length];
+        System.arraycopy(A, 0, C, 0, A.length);
+        System.arraycopy(B, 0, C, A.length, B.length);
+        return C;
+    }
+
+    /**
+     * 返回一个byte数组
+     * @param file
+     * @return
+     * @throws IOException
+     */
+    private  static byte[] getBytesFromFile(File file){
+
+        byte[] bytes = null;
+        try {
+            InputStream is = new FileInputStream(file);
+
+            // 获取文件大小
+            long length = file.length();
+            if (length > Integer.MAX_VALUE) {
+                // 文件太大，无法读取
+                throw new IOException("File is to large " + file.getName());
+            }
+            // 创建一个数据来保存文件数据
+            bytes = new byte[(int) length];
+            // 读取数据到byte数组中
+            int offset = 0;
+            int numRead = 0;
+            while (offset < bytes.length
+                    && (numRead = is.read(bytes, offset, bytes.length - offset)) >= 0) {
+                offset += numRead;
+            }
+            // 确保所有数据均被读取
+            if (offset < bytes.length) {
+                throw new IOException("Could not completely read file "
+                        + file.getName());
+            }
+            // Close the input stream and return bytes
+            is.close();
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        return bytes;
+    }
+
 
 
 }
